[package]
name = "carthing-linux-debug"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.slint]
version = "1.8.0"
default-features = false
features = [
    "compat-1-2",
    "backend-winit-wayland",
    "renderer-femtovg",
    "log",
    "std",
    "software-renderer-systemfonts"
]

[build-dependencies]
slint-build = "1.8.0"
